# viewer3d

./: Cargo.toml  pyproject.toml
assets/: tuto-07-teapot.rs
notebooks/: 20240217_test_niigz.ipynb  sandbox.ipynb
shader/: simple.fs  simple.vs  simple3d.fs  simple3d.vs
src/: io.rs  main.rs  shader.rs  simple.rs  view.rs
src/view/: simple.rs  simple3d.rs
