[tool.poetry]
name = "viewer3d"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.2"
nibabel = "^5.2.0"
matplotlib = "^3.8.3"
nbstripout = "^0.7.1"


[tool.poetry.group.dev.dependencies]
epc = "^0.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
